# exercise

./: README.md  pyproject.toml
optimization/: column generation.ipynb
